crates/php-parser/tests/snapshots/integration__goto_backward_jump.snap
---
source: crates/php-parser/tests/integration.rs
expression: to_json(&result.program)
---
{
  "stmts": [
    {
      "kind": {
        "Label": "start"
      },
      "span": {
        "start": 6,
        "end": 13
      }
    },
    {
      "kind": {
        "If": {
          "condition": {
            "kind": {
              "Binary": {
                "left": {
                  "kind": {
                    "UnaryPostfix": {
                      "operand": {
                        "kind": {
                          "Variable": "count"
                        },
                        "span": {
                          "start": 17,
                          "end": 23
                        }
                      },
                      "op": "PostIncrement"
                    }
                  },
                  "span": {
                    "start": 17,
                    "end": 25
                  }
                },
                "op": "Less",
                "right": {
                  "kind": {
                    "Int": 3
                  },
                  "span": {
                    "start": 28,
                    "end": 29
                  }
                }
              }
            },
            "span": {
              "start": 17,
              "end": 29
            }
          },
          "then_branch": {
            "kind": {
              "Block": [
                {
                  "kind": {
                    "Goto": "start"
                  },
                  "span": {
                    "start": 37,
                    "end": 49
                  }
                }
              ]
            },
            "span": {
              "start": 31,
              "end": 50
            }
          },
          "elseif_branches": [],
          "else_branch": null
        }
      },
      "span": {
        "start": 13,
        "end": 50
      }
    }
  ],
  "span": {
    "start": 0,
    "end": 50
  }
}
