crates/php-parser/tests/snapshots/integration__goto_label.snap
---
source: crates/php-parser/tests/integration.rs
expression: "fixture(source, &result.program)"
---
=== source ===
<?php
goto end;
echo 'this is skipped';
end:
echo 'done';

=== snapshot ===
{
  "stmts": [
    {
      "kind": {
        "Goto": "end"
      },
      "span": {
        "start": 6,
        "end": 16
      }
    },
    {
      "kind": {
        "Echo": [
          {
            "kind": {
              "String": "this is skipped"
            },
            "span": {
              "start": 21,
              "end": 38
            }
          }
        ]
      },
      "span": {
        "start": 16,
        "end": 40
      }
    },
    {
      "kind": {
        "Label": "end"
      },
      "span": {
        "start": 40,
        "end": 45
      }
    },
    {
      "kind": {
        "Echo": [
          {
            "kind": {
              "String": "done"
            },
            "span": {
              "start": 50,
              "end": 56
            }
          }
        ]
      },
      "span": {
        "start": 45,
        "end": 58
      }
    }
  ],
  "span": {
    "start": 0,
    "end": 58
  }
}
