crates/php-parser/tests/snapshots/integration__goto_multiple_labels.snap
---
source: crates/php-parser/tests/integration.rs
expression: to_json(&result.program)
---
{
  "stmts": [
    {
      "kind": {
        "If": {
          "condition": {
            "kind": {
              "Variable": "a"
            },
            "span": {
              "start": 10,
              "end": 12
            }
          },
          "then_branch": {
            "kind": {
              "Goto": "labelA"
            },
            "span": {
              "start": 14,
              "end": 27
            }
          },
          "elseif_branches": [],
          "else_branch": null
        }
      },
      "span": {
        "start": 6,
        "end": 27
      }
    },
    {
      "kind": {
        "If": {
          "condition": {
            "kind": {
              "Variable": "b"
            },
            "span": {
              "start": 31,
              "end": 33
            }
          },
          "then_branch": {
            "kind": {
              "Goto": "labelB"
            },
            "span": {
              "start": 35,
              "end": 48
            }
          },
          "elseif_branches": [],
          "else_branch": null
        }
      },
      "span": {
        "start": 27,
        "end": 48
      }
    },
    {
      "kind": {
        "Label": "labelA"
      },
      "span": {
        "start": 48,
        "end": 56
      }
    },
    {
      "kind": {
        "Echo": [
          {
            "kind": {
              "String": "A"
            },
            "span": {
              "start": 61,
              "end": 64
            }
          }
        ]
      },
      "span": {
        "start": 56,
        "end": 66
      }
    },
    {
      "kind": {
        "Goto": "end"
      },
      "span": {
        "start": 66,
        "end": 76
      }
    },
    {
      "kind": {
        "Label": "labelB"
      },
      "span": {
        "start": 76,
        "end": 84
      }
    },
    {
      "kind": {
        "Echo": [
          {
            "kind": {
              "String": "B"
            },
            "span": {
              "start": 89,
              "end": 92
            }
          }
        ]
      },
      "span": {
        "start": 84,
        "end": 94
      }
    },
    {
      "kind": {
        "Label": "end"
      },
      "span": {
        "start": 94,
        "end": 99
      }
    },
    {
      "kind": {
        "Echo": [
          {
            "kind": {
              "String": "done"
            },
            "span": {
              "start": 104,
              "end": 110
            }
          }
        ]
      },
      "span": {
        "start": 99,
        "end": 112
      }
    }
  ],
  "span": {
    "start": 0,
    "end": 112
  }
}
