crates/php-parser/tests/snapshots/integration__goto_undefined_label.snap
---
source: crates/php-parser/tests/integration.rs
expression: "fixture(source, &result.program)"
---
=== source ===
<?php goto undefined; undefined:

=== snapshot ===
{
  "stmts": [
    {
      "kind": {
        "Goto": "undefined"
      },
      "span": {
        "start": 6,
        "end": 22
      }
    },
    {
      "kind": {
        "Label": "undefined"
      },
      "span": {
        "start": 22,
        "end": 33
      }
    }
  ],
  "span": {
    "start": 0,
    "end": 33
  }
}
