crates/php-parser/tests/snapshots/integration__halt_compiler_close_tag.snap
---
source: crates/php-parser/tests/integration.rs
expression: "fixture(source, &result.program)"
---
=== source ===
<?php __halt_compiler() ?> raw data
=== snapshot ===
{
  "stmts": [
    {
      "kind": {
        "HaltCompiler": " raw data"
      },
      "span": {
        "start": 6,
        "end": 35
      }
    }
  ],
  "span": {
    "start": 0,
    "end": 35
  }
}
